gobmkida/c1/do_find_break_chain2_efficient_moves
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_break_chain2_efficient_moves/src/engine/reading.c:4350:67: error: use of undeclared identifier 'byte_9AA88C'
if ( ( v20 = v19 - 20, v21 = v18 + 20LL, v11 == ( unsigned __int8)byte_9AA88C[v19]) 
                                                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_break_chain2_efficient_moves/src/obj/1/reading.o] Error 1
